# cs2-items-schema

./: .gitignore  README.md  collect.py  manifest  pyproject.toml
.github/workflows/: schema.yml
collectors/: _cases.py  _fields.py  _items.py  _sticker_kits.py  _types.py  _typings.py  _vpk_extractor.py  resource_collector.py
schemas/: _phases_mapping.json  cases.json  categories.json  containers.json  definitions.json  items.json  music_kits.json  musics.json  origins.json  paints.json  phases.json  qualities.json  rarities.json  sticker_kit_containers.json  sticker_kits.json  tints.json  types.json  wears.json
sql/: create_mssql.sql  create_mysql.sql  create_oracle.sql  create_postgre.sql  create_sqlite.sql  populate.sql
src/: containers.py  fields.py  items.py  main.py  sql.py  sticker_kits.py  typings.py  utils.py
