[tool.poetry]
name = "cs2-items-schema"
version = "1.0.0"
description = "Schema of CS2 items"
authors = ["Dmytro Tkachenko <itsme@somespecial.one>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.23"
aiohttp = "^3.9.1"
vdf = "^3.4"

[tool.poetry.group.dev.dependencies]
black = "*"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
