[project]
name = "cs2-items-schema"
version = "1.0.0"
description = "Schema of CS2 items"
authors = [{ name = "somespecialone", email = "itsme@somespecial.one" }]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "aiohttp (>=3.13.3,<4.0.0)",
    "vdf (>=3.4,<4.0)"
]

[dependency-groups]
dev = [
    "ruff (>=0.15.2,<0.16.0)"
]

[tool.poetry]
requires-poetry = ">=2.0"
package-mode = false

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
